2008-03-25 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/test_servers.pl: Changed FTP endpoint for DNS updates.

2008-03-19 Eric Saunders <saunders@astro.ex.ac.uk>

        * eSTAR/VT/Handler.pm, eSTAR/VT.pm: Abstracted functionality not 
          directly associated with handling into new class eSTAR::VT. This will
          allow generic virtual telescope functionality independent of
          infrastructure implementation.


2008-03-19 Alasdair Allan <aa@astro.ex.ac.uk>

	* eSTAR/UA/Handler.pm: Modified text for GSM alerts.

2008-03-18 Eric Saunders <saunders@astro.ex.ac.uk>

        * bin/time_server.pl: Upgraded to allow arbitrary start time. Fixed to
        allow simulations beginning in the past to be run correctly when
        accelerated.

2008-03-18 Alasdair Allan <aa@astro.ex.ac.uk>

	* eSTAR/UA/Handler.pm: Added GSM alerts for Nial Tanvir

2008-03-17 Eric Saunders <saunders@astro.ex.ac.uk>

        * eSTAR/NA/Handler.pm, eSTAR/RAPTOR/Handler.pm, eSTAR/VT/Handler.pm, 
        eSTAR/JACH/Handler.pm, eSTAR/NA/Handler.pm, eSTAR/RAPTOR/Handler.pm,
        eSTAR/VT/Handler.pm, eSTAR/JACH/Handler.pm: Removed obsolete 
        eSTAR::LDAP::Search dependency from all handlers. 

2008-03-17 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/user_agent.pl: Moved default list of node agents to first start
	  only. Won't update unless this is the first run.
	  
	* bin/soap_client.pl: Hacked about to talk to Java NodeAgent. Needs
	  rewriting from scratch at some point.  
	  
	 * eSTAR/Util.pm: Added time_at_LT, time_at_FTN and time_at_FTS
	   functions 
	  
2008-03-14 Eric Saunders <saunders@astro.ex.ac.uk>

        * eSTAR/ADP/Util.pm: Commited update from last summer to use 
        DateTime::Epoch. Fixes 1 month boundary bug.
        
        * bin/adaptive_vs_scheduler.pl: Commited update from last summer which
        implements partial run restarts for the ADP agent.

2008-03-12 Alasdair Allan <aa@astro.ex.ac.uk>
